--- a/res/values/analytics.xml
+++ b/res/values/analytics.xml
@@ -9,4 +9,6 @@
 
   <!--Enable automatic exception tracking-->
   <bool name="ga_reportUncaughtExceptions">true</bool>
+  
+  <string name="com.rbennett485.dawnoftheveg.DawnOfTheVeg">Main Activity</string>
 </resources>
